--- a/bsp/stm32f40x/drivers/SConscript
+++ b/bsp/stm32f40x/drivers/SConscript
@@ -19,6 +19,10 @@ if GetDepend('RT_USING_LWIP'):
 if GetDepend('RT_USING_PIN'):
     src += ['gpio.c']
 
+# add i2c driver.
+if GetDepend('RT_USING_I2C') == True:
+    src += ['stm32_i2c.c']
+
 CPPPATH = [cwd]
 
 group = DefineGroup('Drivers', src, depend = [''], CPPPATH = CPPPATH)
